# ORProfile

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: documentation.yml
dev/: api.html  genindex.html  hardware.html  index.html  install.html  notebook.html  objects.inv  search.html  searchindex.js  survey.html
dev/_generated/: orprofile.api.Mesh.html  orprofile.api.Mesh.map_rowcol_wise.html  orprofile.api.Mesh.mesh2d.html  orprofile.api.Mesh.mesh_kernel.html  orprofile.api.Mesh.plot.html  orprofile.api.Mesh.points.html  orprofile.api.Mesh.read_points.html  orprofile.api.Mesh.splines.html  orprofile.api.depth_2d.html  orprofile.profile.deepest_point_y_dist.html  orprofile.profile.depth_from_width.html  orprofile.profile.depth_profile_left_right_parameters.html
dev/_modules/: index.html
dev/_modules/orprofile/api/: depth.html  mesh.html
dev/_modules/orprofile/profile/: lacey.html
dev/_notebooks/: full_example.html  full_example.ipynb
docs/: Makefile  api.rst  conf.py  hardware.rst  index.rst  install.rst  make.bat  notebook.rst  requirements.txt  survey.rst
docs/_static/: theme-local-devices.css
examples/data/: bamboi_dry.geojson  bamboi_survey.geojson  splines.geojson
notebooks/: 2D_optimization.ipynb  Lacey_curvilinear.ipynb  Lacey_implementation.ipynb  apply_profile.ipynb  full_example.ipynb
orprofile/: __init__.py  geom.py
orprofile/api/: __init__.py  depth.py  depth_sample.py  mesh.py
orprofile/profile/: __init__.py  lacey.py  map_funcs.py
tests/: conftest.py  test_depth_2d.py  test_mesh.py  test_profile.py  test_samples.py
