[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "orprofile"
authors = [
  { name = "Hessel Winsemius", email = "winsemius@rainbowsensing.com" },
  { name = "Stephen Mather", email = "opendronemap.org@gmail.com" },
]
dependencies = [
    "cartopy",
    "dask",
    "geopandas",
    "jupyter",
    "netcdf4",
    "matplotlib", # to run examples
    "meshkernel",
    "numpy",
    "pandas",
    "pip",
    "pygeos",
    "rasterio",
    "scipy",
    "xarray",
    "xugrid"  # xugrid may be useful for storing or resampling on unstructrured grids in xarray data models
]

requires-python = ">=3.9"
readme = "README.md"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Hydrology",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
]
dynamic = ['version', 'description']

[project.optional-dependencies]
io = [
]
extra = [
]
dev = [
  "black",       # linting
  "ruff",        # linting
  "pre-commit",  # linting
  "pip>=23.1.2", # needed for recursive dependencies
  "flit",        # needed to publish to pypi
  "twine",       # needed to publish to pypi
]
test = [
    "pytest>=2.7.3",  # testing framework
    "pytest-cov",     # test coverage
    "pytest-mock",    # mocking
    "pytest-lazy-fixture",
    "pytest-timeout", # darn hanging tests
]
doc = [
  "nbsphinx",                     # build notebooks in docs
  "pydata-sphinx-theme",          # theme
  "sphinx",                       # build docks
  "sphinx_design",                # doc layout
  "sphinx_autosummary_accessors", # doc layout
]
examples = [
]

full = ["orprofile[io,extra,dev,test,doc,examples]"]
slim = ["orprofile[io,extra,examples]"]

[project.urls]
Source = "https://github.com/localdevices/ORProfile"